--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,10 @@ footer {
   .div1, .div2, .div3 {
     margin: 7% 10%;
   }
-
+   .table0 , .table1 , .table2 , .table3{
+  width: 100%;
+} 
+  
   img {
     height: auto;
     width: 35%;
