--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ footer {
 }
 
 /* ============================ MEDIA QUERY ============================================ */
-@media only screen and (min-width:300px) and (max-width: 600px) {
+/* @media only screen and (min-width:300px) and (max-width: 600px) {
   .submit {
     width: 20%;
   }
@@ -123,5 +123,5 @@ footer {
     padding-bottom: 2%;
     border: 6px double #e7dec8;
   }
-}
+} */
 
